Compiled by Bellsoft Liberica JDK 25+37